--- a/FilRouge/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/FilRouge/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1,5 +1,6 @@
 ;METADATA=(Diff=true, UseCommands=true)
 [/Script/UnrealEd.EditorPerProjectUserSettings]
+bAllowSelectTranslucent=False
 bDisplayDocumentationLink=False
 bDisplayActionListItemRefIds=False
 bAlwaysGatherBehaviorTreeDebuggerData=False
@@ -211,9 +212,12 @@ BP_LightReactor_C=EdGraph.Inputs.6F10A2374CF89F738CB4CB98C4A3FD21,Blueprint.Inte
 StaticMeshActor=EdGraph.Inputs.6F10A2374CF89F738CB4CB98C4A3FD21,Blueprint.Interfaces.Implemented Interfaces
 PlayerStart=EdGraph.Inputs.6F10A2374CF89F738CB4CB98C4A3FD21,Blueprint.Interfaces.Implemented Interfaces
 CapsuleComponent=EdGraph.Inputs.6F10A2374CF89F738CB4CB98C4A3FD21,Blueprint.Interfaces.Implemented Interfaces
+PointLightComponent=EdGraph.Inputs.6F10A2374CF89F738CB4CB98C4A3FD21,Blueprint.Interfaces.Implemented Interfaces
+BP_EmptySolvable_C=EdGraph.Inputs.6F10A2374CF89F738CB4CB98C4A3FD21,Blueprint.Interfaces.Implemented Interfaces
+K2Node_CallFunction=EdGraph.Inputs.6F10A2374CF89F738CB4CB98C4A3FD21,Blueprint.Interfaces.Implemented Interfaces
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/CustomContent/Blueprints/Reactors
+ContentBrowserTab1.SelectedPaths=/Game/CustomContent/Essentials
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.IsLocked=False
@@ -243,8 +247,10 @@ ContentBrowserTab1.ListViewColumnsManuallyChangedOnce=False
 ContentBrowserTab1.ColumnViewColumnsManuallyChangedOnce=False
 ContentBrowserTab1.JumpMRU=/All/Game/CustomContent/Blueprints/Solvables
 ContentBrowserTab1.JumpMRU=/All/Game/CustomContent/Blueprints
-ContentBrowserTab1.JumpMRU=/All/Game/CustomContent/Blueprints/Interactables
+ContentBrowserTab1.JumpMRU=/All/Game/CustomContent
 ContentBrowserTab1.JumpMRU=/All/Game/CustomContent/Blueprints/Systems
+ContentBrowserTab1.JumpMRU=/All/Game/CustomContent/Blueprints/Reactors
+ContentBrowserTab1.JumpMRU=/All/Game/CustomContent/Blueprints/Interactables
 ContentBrowserTab1.JumpMRU=/Game
 ContentBrowserTab1.JumpMRU=/All/Game/CustomContent/Blueprints/Interactables/System
 ContentBrowserTab1.JumpMRU=/All/Game/CustomContent/Audio
@@ -258,7 +264,6 @@ ContentBrowserTab1.JumpMRU=/All/Game/_StartingContent/ThirdPerson/Blueprints
 ContentBrowserTab1.JumpMRU=/All/Game/_StartingContent/ThirdPerson
 ContentBrowserTab1.JumpMRU=/All/Game/_StartingContent/Characters
 ContentBrowserTab1.JumpMRU=/All/Game/_StartingContent/Characters/Mannequins
-ContentBrowserTab1.JumpMRU=/All/Game/CustomContent
 ContentBrowserTab1.JumpMRU=/All/Game/CustomContent/Controls
 ContentBrowserTab1.JumpMRU=/All/Game/CustomContent/Controls/Default
 ContentBrowserTab1.JumpMRU=/All/Game/CustomContent/Materials
@@ -270,7 +275,6 @@ ContentBrowserTab1.JumpMRU=/All/Game/CustomContent/CustomStuff
 ContentBrowserTab1.JumpMRU=/All/Game/CustomContent/CustomStuff/Widgets
 ContentBrowserTab1.JumpMRU=/All/Game/CustomContent/CustomStuff/Maps
 ContentBrowserTab1.JumpMRU=/All/Game/CustomContent/CustomStuff/Levels
-ContentBrowserTab1.JumpMRU=/All/Game/CustomContent/CustomStuff/Inputs
 AssetDialog.ThumbnailSizeGrid=3
 AssetDialog.ThumbnailSizeList=3
 AssetDialog.ThumbnailSizeCustom=3
@@ -461,13 +465,15 @@ K2Node_Variable="\"Object\" "
 K2Node="\"Object\" "
 K2Node_SwitchInteger="\"Object\" "
 K2Node_Switch="\"Object\" "
-BPabs_GEN_Solvable_C=
+BPabs_GEN_Solvable_C="\"Object.Var\" \"Object.Var.SolvableConditions\" "
 K2Node_MapForEach="\"Object\" "
 PaperSpriteComponent="\"Object\" "
 Actor="\"Object\" "
 StaticMeshComponent="\"Object\" "
-BP_LightInteractable_C="\"Object\" \"Object.Var.TriggeredReactors_NOARGS\" "
-BPabs_GEN_Interactable_C="\"Object\" \"Object.Var.TriggeredReactors_NOARGS\" "
+BP_LightInteractable_C="\"Object\" \"Object.Var.TriggeredReactors_NOARGS\" \"Object.Var.UpdatedSolvables\" "
+BPabs_GEN_Interactable_C="\"Object\" "
+BP_BasicSolvable_C="\"Object.Var\" \"Object.Var.SolvableConditions\" "
+BP_EmptySolvable_C="\"Object.Var\" \"Object.Var.SolvableConditions\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=False
@@ -482,18 +488,18 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=
-OpenAssetsAtExit=/Game/CustomContent/Blueprints/Systems/BPabs_GEN_Interactable.BPabs_GEN_Interactable
-OpenAssetsAtExit=/Game/CustomContent/Blueprints/Systems/BPabs_GEN_Solvable.BPabs_GEN_Solvable
+OpenAssetsAtExit=/Game/CustomContent/Blueprints/Solvables/BP_EmptySolvable.BP_EmptySolvable
 OpenAssetsAtExit=/Game/CustomContent/Blueprints/Interactables/BP_LightInteractable.BP_LightInteractable
+OpenAssetsAtExit=/Game/CustomContent/Blueprints/Systems/BPabs_GEN_Solvable.BPabs_GEN_Solvable
 OpenAssetsAtExit=/Game/CustomContent/Blueprints/Solvables/BP_BasicSolvable.BP_BasicSolvable
-OpenAssetsAtExit=/Game/CustomContent/Blueprints/Systems/BPabs_GEN_Reactor.BPabs_GEN_Reactor
+OpenAssetsAtExit=/Game/CustomContent/Essentials/BP_FilRougeCharacter.BP_FilRougeCharacter
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1905,19 +1911,19 @@ RecentsFiles=C:/Program Files/Epic Games/UE_5.6/Engine/Plugins/Animation/Control
 InstalledPlugins=GeneSplicer
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/CustomContent/Blueprints/Reactors/BP_LightReactor
-MRUItem1=/Game/CustomContent/Blueprints/BP_SimpleLight
-MRUItem2=/Game/CustomContent/Blueprints/Systems/BPabs_GEN_Reactor
+MRUItem0=/Game/CustomContent/Essentials/BP_FilRougeCharacter
+MRUItem1=/Game/CustomContent/Blueprints/Systems/BPabs_GEN_Interactable
+MRUItem2=/Game/CustomContent/Blueprints/Interactables/BP_LightInteractable
 MRUItem3=/Game/CustomContent/Blueprints/Systems/BPI_Reactor
-MRUItem4=/Game/CustomContent/Blueprints/Solvables/BP_BasicSolvable
-MRUItem5=/Game/CustomContent/Blueprints/Interactables/BP_LightInteractable
-MRUItem6=/Game/CustomContent/Blueprints/Systems/BPI_Interactable
-MRUItem7=/Game/CustomContent/Blueprints/Systems/BPabs_GEN_Solvable
-MRUItem8=/Game/CustomContent/Blueprints/Systems/BPabs_GEN_Interactable
-MRUItem9=/Game/CustomContent/Blueprints/Systems/BPI_Solvable
-MRUItem10=/Game/CustomContent/Levels/TestingAreas/LVL_SysTest_Solvable
-MRUItem11=/Game/CustomContent/Essentials/BP_FilRougeGameMode
-MRUItem12=/Game/CustomContent/Essentials/BP_FilRougeCharacter
+MRUItem4=/Game/CustomContent/Blueprints/BP_SimpleLight
+MRUItem5=/Game/CustomContent/Blueprints/Solvables/BP_EmptySolvable
+MRUItem6=/Game/CustomContent/Blueprints/Systems/BPabs_GEN_Reactor
+MRUItem7=/Game/CustomContent/Blueprints/Solvables/BP_BasicSolvable
+MRUItem8=/Game/CustomContent/Blueprints/Systems/BPI_Interactable
+MRUItem9=/Game/CustomContent/Blueprints/Systems/BPabs_GEN_Solvable
+MRUItem10=/Game/CustomContent/Blueprints/Systems/BPI_Solvable
+MRUItem11=/Game/CustomContent/Levels/TestingAreas/LVL_SysTest_Solvable
+MRUItem12=/Game/CustomContent/Essentials/BP_FilRougeGameMode
 MRUItem13=/Game/CustomContent/Essentials/BP_FilRougePlayerController
 MRUItem14=/Game/CustomContent/Controls/IMC_Interactions
 MRUItem15=/Game/CustomContent/Controls/Default/IA_Interact
@@ -2705,6 +2711,17 @@ PlayerStart.Networking=True
 PlayerStart.Input=True
 PlayerStart.Actor=True
 BP_LightInteractable_C.Var=True
+BP_EmptySolvable_C.Default=True
+BP_EmptySolvable_C.Tick=True
+BP_EmptySolvable_C.Var=True
+BP_EmptySolvable_C.Replication=True
+BP_EmptySolvable_C.Rendering=True
+BP_EmptySolvable_C.Actor=True
+BP_EmptySolvable_C.Collision=True
+BP_EmptySolvable_C.HLOD=True
+BP_EmptySolvable_C.Input=True
+BP_EmptySolvable_C.Physics=True
+BP_EmptySolvable_C.Events=True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -2722,6 +2739,8 @@ MulticastInlineDelegatePropertyWrapper.Variable=False
 LastLogListing=AssetCheck
 
 [PlacementMode]
+RecentlyPlaced=/Game/CustomContent/Blueprints/Solvables/BP_BasicSolvable.BP_BasicSolvable;
+RecentlyPlaced=/Game/CustomContent/Blueprints/Solvables/BP_EmptySolvable.BP_EmptySolvable;
 RecentlyPlaced=/Game/CustomContent/Blueprints/Reactors/BP_LightReactor.BP_LightReactor;
 RecentlyPlaced=/Game/CustomContent/Blueprints/BP_SimpleLight.BP_SimpleLight;
 RecentlyPlaced=/Game/CustomContent/Blueprints/Interactables/System/BPabs_GEN_Solvable.BPabs_GEN_Solvable;
@@ -2753,6 +2772,7 @@ RecentlyPlaced=/Game/CustomContent/Blueprints/BP_Door.BP_Door;
 /Game/CustomContent/Blueprints/BP_SimpleLight.BP_SimpleLight=0
 /Game/CustomContent/Blueprints/Systems/BPI_Reactor.BPI_Reactor=0
 /Game/CustomContent/Blueprints/Reactors/BP_LightReactor.BP_LightReactor=0
+/Game/CustomContent/Blueprints/Systems/BPabs_GEN_Reactor.BPabs_GEN_Reactor=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2811,15 +2831,22 @@ GraphEditorQuickJumps=()
 Theme0=New Theme
 
 [RecentColors]
-Color0=(R=120.000000,G=1.000000,B=1.000000,A=1.000000)
+Color0=(R=116.933189,G=0.800305,B=1.000000,A=1.000000)
 Color1=(R=0.000000,G=1.000000,B=1.000000,A=1.000000)
 Color2=(R=0.000000,G=1.000000,B=1.000000,A=1.000000)
-Color3=(R=0.000000,G=1.000000,B=1.000000,A=1.000000)
-Color4=(R=36.000000,G=1.000000,B=1.000000,A=1.000000)
-Color5=(R=18.000000,G=1.000000,B=1.000000,A=1.000000)
-Color6=(R=173.651794,G=0.952290,B=0.693872,A=1.000000)
-Color7=(R=171.428574,G=1.000000,B=0.700000,A=1.000000)
-Color8=(R=18.032623,G=1.000000,B=1.000000,A=1.000000)
+Color3=(R=120.000000,G=1.000000,B=1.000000,A=1.000000)
+Color4=(R=120.000000,G=1.000000,B=1.000000,A=1.000000)
+Color5=(R=60.000000,G=1.000000,B=1.000000,A=1.000000)
+Color6=(R=300.000000,G=1.000000,B=1.000000,A=1.000000)
+Color7=(R=120.000000,G=1.000000,B=1.000000,A=1.000000)
+Color8=(R=0.000000,G=1.000000,B=1.000000,A=1.000000)
+Color9=(R=0.000000,G=1.000000,B=1.000000,A=1.000000)
+Color10=(R=0.000000,G=1.000000,B=1.000000,A=1.000000)
+Color11=(R=36.000000,G=1.000000,B=1.000000,A=1.000000)
+Color12=(R=18.000000,G=1.000000,B=1.000000,A=1.000000)
+Color13=(R=173.651794,G=0.952290,B=0.693872,A=1.000000)
+Color14=(R=171.428574,G=1.000000,B=0.700000,A=1.000000)
+Color15=(R=18.032623,G=1.000000,B=1.000000,A=1.000000)
 
 [SuppressableDialogs]
 ChangeVariableType_Warning=False
